Updated the collection svg icon for the care packs

--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -647,7 +647,8 @@
             -webkit-text-stroke-color: var(--pink);
         }
     }
-
+    
+    &[data-theme="care-packs"],
     &[data-theme="pregnancy"] {
         background: var(--blue-light) !important;
 
