--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -407,11 +407,16 @@
                 justify-content: space-between;
 
                 h6 {
+                    position: relative;
+
                     &:first-of-type {
-                        width: calc(100% - 5rem);
+                        width: calc(100% - 7rem);
                     }
+
                     &:last-of-type {
-                        width: 5rem;
+                        width: 7rem;
+                        position: relative;
+                        text-align: right;
                     }
                 }
             }
@@ -647,7 +652,7 @@
             -webkit-text-stroke-color: var(--pink);
         }
     }
-    
+
     &[data-theme="care-packs"],
     &[data-theme="pregnancy"] {
         background: var(--blue-light) !important;
@@ -710,5 +715,76 @@
 
     @media screen and (max-width: 768px) {
         margin: 16rem auto -12rem;
+    }
+}
+
+.collection-grid__list__item__title {
+    h6 {
+        position: relative;
+    }
+}
+
+.sale-item {
+    position: absolute;
+    top: 4rem;
+    left: 3rem;
+    padding: 0 2rem 2rem 0;
+    z-index: 3;
+    line-height: 0.7;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--green);
+    font-size: 3.6rem;
+    font-weight: bold;
+    transform: rotate(-45deg);
+
+    .char {
+        padding-bottom: 10px;
+    }
+}
+
+.collections__slider .sale-item {
+    top: 5.5rem !important;
+    left: 4.5rem !important;
+        font-size: 3.2rem;
+}
+
+.old-price {
+    position: absolute;
+    font-size: 1.4rem;
+    display: block;
+    bottom: calc(100% - 2px);
+    right: 0;
+    font-weight: bold;
+
+    &:after {
+        @include pseudo;
+        width: 100%;
+        height: 1.5px;
+        background: var(--green);
+        top: 55%;
+        transform: rotate(-10deg);
+    }
+}
+
+[data-theme="postpartum"],
+[data-theme="postpartum"],
+[data-theme="c-section-delivery"],
+[data-theme="v-delivery"] {
+    .old-price:after {
+        background: var(--orange);
+    }
+    .sale-item {
+        -webkit-text-stroke-color: var(--orange);
+    }
+}
+
+[data-theme="breast-care"] {
+    .old-price:after {
+        background: var(--pink);
+    }
+    .sale-item {
+        -webkit-text-stroke-color: var(--pink);
     }
 }
