--- a/sections/black-friday.liquid
+++ b/sections/black-friday.liquid
@@ -59,11 +59,9 @@
     <div class="banner-constrasdint">
       <h1 class="white text-center">
         <b>
-          BLACK FRIDAY<br>
-          25% OFF STOREWIDE
+        &nbsp;
         </b>
       </h1>
-      <p class="small white text-center">Ends midnight 1 December 2025. No additional discounts apply.</p>
     </div>
   </div>
 </div>
