--- a/source/sections/cart.scss
+++ b/source/sections/cart.scss
@@ -135,26 +135,77 @@
 
                             &:nth-child(1) {
                                 width: 10rem;
+                                order: 1;
+
+                                @media screen and (max-width: 768px) {
+                                    width: 8rem;
+                                    padding: 1rem;
+                                }
                             }
 
                             &:nth-child(2) {
                                 width: calc(100% - 50rem);
                                 padding-left: 4rem;
+                                order: 2;
+
+                                @media screen and (max-width: 768px) {
+                                    width: calc(100% - 13rem);
+                                    order: 2;
+                                    padding: 1rem 0rem 1rem 2rem;
+                                }
                             }
 
                             &:nth-child(3) {
                                 width: 20rem;
                                 text-align: center;
+                                order: 3;
+
+                                @media screen and (max-width: 768px) {
+                                    width: 16rem;
+                                    order: 4;
+                                    margin-left: auto;
+                                }
+
+                                @media screen and (max-width: 440px) {
+                                    width: 100%;
+                                    width: 16rem;
+                                    margin-left: auto;
+                                    margin-right: 0;
+                                    justify-content: flex-end;
+                                    padding-top: 0;
+                                    padding-bottom: 1rem;
+                                    padding-top: 0rem !important;
+                                }
                             }
 
                             &:nth-child(4) {
                                 width: 15rem;
                                 text-align: center;
+                                order: 4;
+
+                                @media screen and (max-width: 768px) {
+                                    width: 14rem;
+                                    order: 4;
+                                }
+
+                                @media screen and (max-width: 440px) {
+                                    padding-top: 0rem !important;
+                                    padding-top: 0rem;
+                                    padding-bottom: 1rem;
+                                }
                             }
 
                             &:nth-child(5) {
                                 width: 5rem;
                                 text-align: center;
+                                order: 5;
+
+                                @media screen and (max-width: 768px) {
+                                    width: 5rem;
+                                    position: relative;
+                                    top: 3px;
+                                    order: 3;
+                                }
                             }
                         }
                     }
